# UCT3rdYearLabATLASOpenData

./: DS_Tutorial_How_much_Higgs?.ipynb  pyproject.toml
report/: higgs_report.tex
