[tool.poetry]
name = "uct3rdyearlabatlasopendata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
uproot = "<4.0.0"
uproot-methods = "0.9.2"
awkward = "<1.0.0"
numpy = ">=1.13.1"
scipy = "1.6.0"
cachetools = "^4.2.2"
pkgconfig = "^1.5.5"
lz4 = "^3.1.3"
zstandard = "^0.15.2"
pandas = "^1.3.2"
requests = "^2.26.0"
matplotlib = "^3.4.3"
dask = {extras = ["dataframe"], version = "^2021.8.1"}
fsspec = "^2021.7.0"
cloudpickle = "^1.6.0"
PyYAML = "^5.4.1"
xxhash = "^2.0.2"
lorentz = "^0.0.1"
mplhep = "^0.3.12"
notebook = "^6.4.3"
pycurl = "^7.44.1"
SciencePlots = "^1.0.8"
jupyterlab = "^3.1.10"
numba = "^0.54.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
